--- a/vmidentity/idm/pom.xml
+++ b/vmidentity/idm/pom.xml
@@ -5,24 +5,24 @@
   <parent>
     <groupId>com.vmware.identity</groupId>
     <artifactId>vmware-identity</artifactId>
-    <version>6.6.1</version>
+    <version>6.6.3</version>
   </parent>
 
   <groupId>com.vmware.identity.idm</groupId>
   <artifactId>vmware-identity-idm</artifactId>
-  <version>6.6.1</version>
+  <version>6.6.3</version>
   <packaging>pom</packaging>
   <name>vmware-identity-idm</name>
 
   <modules>
     <module>interface</module>
-    <module>client</module>
     <module>server</module>
+    <module>client</module>
   </modules>
 
   <properties>
     <java.version>1.7</java.version>
-    <vmware.version>6.6.1</vmware.version>
+    <vmware.version>${project.version}</vmware.version>
   </properties>
 
 </project>
