--- a/vmidentity/idm/server/pom.xml
+++ b/vmidentity/idm/server/pom.xml
@@ -6,11 +6,11 @@
   <parent>
     <groupId>com.vmware.identity.idm</groupId>
     <artifactId>vmware-identity-idm</artifactId>
-    <version>6.6.1</version>
+    <version>6.6.3</version>
   </parent>
 
   <artifactId>vmware-identity-idm-server</artifactId>
-  <version>6.6.1</version>
+  <version>6.6.3</version>
   <packaging>jar</packaging>
   <name>vmware-identity-idm-server</name>
 
@@ -43,6 +43,23 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-install-plugin</artifactId>
+         <version>2.5.1</version>
+         <configuration>
+            <file>${outputDirectory}/vmware-identity-idm-server.jar</file>
+         </configuration>
+         <executions>
+           <execution>
+            <goals>
+              <goal>install</goal>
+            </goals>
+            <phase>package</phase>
+           </execution>
+         </executions>
+      </plugin>
+
       <plugin>
 	<groupId>org.apache.maven.plugins</groupId>
 	<artifactId>maven-source-plugin</artifactId>
