--- a/vmidentity/openidconnect/common/pom.xml
+++ b/vmidentity/openidconnect/common/pom.xml
@@ -1,9 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>com.vmware.identity</groupId>
+    <artifactId>vmware-identity-oidc</artifactId>
+    <version>6.6.3</version>
+  </parent>
     <groupId>com.vmware.identity</groupId>
     <artifactId>openidconnect-common</artifactId>
-    <version>6.6.1</version>
+    <version>6.6.3</version>
 
     <properties>
         <java.version>1.7</java.version>
