--- a/vmidentity/openidconnect/protocol/pom.xml
+++ b/vmidentity/openidconnect/protocol/pom.xml
@@ -1,13 +1,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.vmware.identity</groupId>
+        <artifactId>vmware-identity-oidc</artifactId>
+        <version>6.6.3</version>
+    </parent>
     <groupId>com.vmware.identity</groupId>
     <artifactId>openidconnect-protocol</artifactId>
-    <version>6.6.1</version>
+    <version>6.6.3</version>
 
     <properties>
         <java.version>1.7</java.version>
-        <vmware.version>6.6.1</vmware.version>
+        <vmware.version>${project.version}</vmware.version>
         <nimbus-jose-jwt.version>4.12</nimbus-jose-jwt.version>
         <commons-lang3.version>3.3.2</commons-lang3.version>
         <httpclient.version>4.5.1</httpclient.version>
