--- a/vmidentity/openidconnect/sample/pom.xml
+++ b/vmidentity/openidconnect/sample/pom.xml
@@ -1,14 +1,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.vmware.identity</groupId>
+        <artifactId>vmware-identity-oidc</artifactId>
+        <version>6.6.3</version>
+    </parent>
     <groupId>com.vmware.identity</groupId>
     <artifactId>openidconnect-sample-rp</artifactId>
-    <version>6.6.1</version>
+    <version>6.6.3</version>
     <packaging>war</packaging>
 
     <properties>
         <java.version>1.7</java.version>
-        <vmware.version>6.6.1</vmware.version>
+        <vmware.version>${project.version}</vmware.version>
         <javax.servlet-api.version>3.0.1</javax.servlet-api.version>
         <bouncycastle.version>1.47</bouncycastle.version>
         <springframework.version>4.0.6.RELEASE</springframework.version>
