--- a/vmidentity/openidconnect/server/pom.xml
+++ b/vmidentity/openidconnect/server/pom.xml
@@ -1,20 +1,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.vmware.identity</groupId>
+        <artifactId>vmware-identity-oidc</artifactId>
+        <version>6.6.3</version>
+    </parent>
     <groupId>com.vmware.identity</groupId>
     <artifactId>openidconnect</artifactId>
-    <version>6.6.1</version>
+    <version>6.6.3</version>
 
     <properties>
         <java.version>1.7</java.version>
-        <vmware.version>6.6.1</vmware.version>
+        <vmware.version>${project.version}</vmware.version>
         <javax.servlet-api.version>3.0.1</javax.servlet-api.version>
         <springframework.version>4.0.6.RELEASE</springframework.version>
         <jstl.version>1.2</jstl.version>
         <junit.version>4.12</junit.version>
         <bouncycastle.version>1.47</bouncycastle.version>
         <commons.lang.version>2.6</commons.lang.version>
-        <log4j.version>2.2</log4j.version>
 
         <webapp.dir>src/main</webapp.dir>
         <outputDirectory>${basedir}/../../build/vmware-sts/packages</outputDirectory>
@@ -186,13 +190,13 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>${log4j.version}</version>
+            <version>${apache.log4j.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
-            <version>${log4j.version}</version>
+            <version>${apache.log4j.version}</version>
         </dependency>
     </dependencies>
 </project>
