--- a/vmidentity/rest/core/server/pom.xml
+++ b/vmidentity/rest/core/server/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.vmware.identity.rest.core</groupId>
     <artifactId>vmware-identity-rest-core</artifactId>
-    <version>6.6.1</version>
+    <version>6.6.3</version>
   </parent>
 
   <artifactId>vmware-identity-rest-core-server</artifactId>
@@ -73,13 +73,13 @@
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
-      <version>${log4j.version}</version>
+      <version>${apache.log4j.version}</version>
     </dependency>
 
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-api</artifactId>
-      <version>${log4j.version}</version>
+      <version>${apache.log4j.version}</version>
     </dependency>
 
     <dependency>
