--- a/vmidentity/rest/pom.xml
+++ b/vmidentity/rest/pom.xml
@@ -1,10 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+<parent>
+    <groupId>com.vmware.identity</groupId>
+    <artifactId>vmware-identity</artifactId>
+    <version>6.6.3</version>
+  </parent>
 
   <groupId>com.vmware.identity.rest</groupId>
   <artifactId>vmware-identity-rest</artifactId>
-  <version>6.6.1</version>
+  <version>6.6.3</version>
   <packaging>pom</packaging>
 
   <name>vmware-identity-rest</name>
@@ -30,11 +35,10 @@
     <java.version>1.7</java.version>
     <jersey.version>2.12</jersey.version>
     <javax.servlet.version>3.1.0</javax.servlet.version>
-    <vmware.version>6.6.1</vmware.version>
+    <vmware.version>${project.version}</vmware.version>
 
     <javax.ws.rs.version>2.0.1</javax.ws.rs.version>
     <jackson.version>2.3.2</jackson.version>
-    <log4j.version>2.2</log4j.version>
     <slf4j.version>1.7.2</slf4j.version>
     <commons.codec.version>1.9</commons.codec.version>
     <commons.io.version>2.4</commons.io.version>
