--- a/vmidentity/diagnostics/pom.xml
+++ b/vmidentity/diagnostics/pom.xml
@@ -162,7 +162,7 @@
  </dependencies>
 
   <properties>
-    <outputDirectory>${basedir}/../build/vmware-sts/packages</outputDirectory>
+    <outputDirectory>${basedir}/../${packageDir}</outputDirectory>
     <manifestPath>src/main/resources/MANIFEST.MF</manifestPath>
   </properties>
 
