--- a/vmidentity/idm/interface/pom.xml
+++ b/vmidentity/idm/interface/pom.xml
@@ -15,7 +15,7 @@
   <name>vmware-identity-idm-interface</name>
 
   <properties>
-    <outputDirectory>${basedir}/../../build/vmware-sts/packages</outputDirectory>
+    <outputDirectory>${basedir}/../../${packageDir}</outputDirectory>
   </properties>
 
   <build>
