--- a/vmidentity/openidconnect/server/pom.xml
+++ b/vmidentity/openidconnect/server/pom.xml
@@ -1,11 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
-        <groupId>com.vmware.identity</groupId>
+        <groupId>com.vmware.identity.oidc</groupId>
         <artifactId>vmware-identity-oidc</artifactId>
         <version>6.6.3</version>
     </parent>
+
     <groupId>com.vmware.identity</groupId>
     <artifactId>openidconnect</artifactId>
     <version>6.6.3</version>
@@ -21,7 +23,7 @@
         <commons.lang.version>2.6</commons.lang.version>
 
         <webapp.dir>src/main</webapp.dir>
-        <outputDirectory>${basedir}/../../build/vmware-sts/packages</outputDirectory>
+        <outputDirectory>${basedir}/../../${packageDir}</outputDirectory>
     </properties>
 
     <build>
