--- a/vmidentity/rest/core/client/pom.xml
+++ b/vmidentity/rest/core/client/pom.xml
@@ -157,6 +157,6 @@
   </dependencies>
 
   <properties>
-    <outputDirectory>${basedir}/../../../build/vmware-sts/packages</outputDirectory>
+    <outputDirectory>${basedir}/../../../${packageDir}</outputDirectory>
   </properties>
 </project>
