--- a/vmidentity/openidconnect/common/pom.xml
+++ b/vmidentity/openidconnect/common/pom.xml
@@ -1,11 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
   <parent>
-    <groupId>com.vmware.identity</groupId>
+    <groupId>com.vmware.identity.oidc</groupId>
     <artifactId>vmware-identity-oidc</artifactId>
     <version>6.6.3</version>
   </parent>
+
     <groupId>com.vmware.identity</groupId>
     <artifactId>openidconnect-common</artifactId>
     <version>6.6.3</version>
@@ -18,8 +20,7 @@
         <javax.servlet-api.version>3.0.1</javax.servlet-api.version>
         <junit.version>4.12</junit.version>
         <bouncycastle.version>1.47</bouncycastle.version>
-
-        <outputDirectory>${basedir}/../../build/vmware-sts/packages</outputDirectory>
+        <outputDirectory>${basedir}/../../${packageDir}</outputDirectory>
     </properties>
 
     <build>
