--- a/vmidentity/openidconnect/sample/pom.xml
+++ b/vmidentity/openidconnect/sample/pom.xml
@@ -2,10 +2,11 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.vmware.identity</groupId>
+        <groupId>com.vmware.identity.oidc</groupId>
         <artifactId>vmware-identity-oidc</artifactId>
         <version>6.6.3</version>
     </parent>
+
     <groupId>com.vmware.identity</groupId>
     <artifactId>openidconnect-sample-rp</artifactId>
     <version>6.6.3</version>
@@ -22,7 +23,7 @@
         <jackson.databind.version>2.3.2</jackson.databind.version>
         <jackson.core.version>2.3.2</jackson.core.version>
         <jax.ws.rs.version>2.0.1</jax.ws.rs.version>
-        <outputDirectory>${basedir}/../../build/vmware-sts/packages</outputDirectory>
+        <outputDirectory>${basedir}/../../${packageDir}</outputDirectory>
     </properties>
 
     <distributionManagement>
