--- a/vmidentity/rest/afd/common/pom.xml
+++ b/vmidentity/rest/afd/common/pom.xml
@@ -90,6 +90,6 @@
   </dependencies>
 
   <properties>
-    <outputDirectory>${basedir}/../../../build/vmware-sts/packages</outputDirectory>
+    <outputDirectory>${basedir}/../../../${packageDir}</outputDirectory>
   </properties>
 </project>
