--- a/vmidentity/rest/afd/server/pom.xml
+++ b/vmidentity/rest/afd/server/pom.xml
@@ -304,7 +304,7 @@
   </dependencies>
   <properties>
     <war.warName>afd</war.warName>
-    <outputDirectory>${basedir}/../../../build/vmware-sts/packages/</outputDirectory>
+    <outputDirectory>${basedir}/../../../${packageDir}</outputDirectory>
   </properties>
 
 </project>
