--- a/vmidentity/rest/core/common/pom.xml
+++ b/vmidentity/rest/core/common/pom.xml
@@ -98,6 +98,6 @@
   </dependencies>
 
   <properties>
-    <outputDirectory>${basedir}/../../../build/vmware-sts/packages</outputDirectory>
+    <outputDirectory>${basedir}/../../../${packageDir}</outputDirectory>
   </properties>
 </project>
