--- a/vmidentity/rest/idm/samples/pom.xml
+++ b/vmidentity/rest/idm/samples/pom.xml
@@ -184,6 +184,6 @@
   </dependencies>
 
   <properties>
-    <outputDirectory>${basedir}/../../../build/vmware-sts/packages</outputDirectory>
+    <outputDirectory>${basedir}/../../../${packageDir}</outputDirectory>
   </properties>
 </project>
