--- a/vmidentity/rest/idm/server/pom.xml
+++ b/vmidentity/rest/idm/server/pom.xml
@@ -340,7 +340,7 @@
   </dependencies>
   <properties>
     <war.warName>idm</war.warName>
-    <outputDirectory>${basedir}/../../../build/vmware-sts/packages/</outputDirectory>
+    <outputDirectory>${basedir}/../../../${packageDir}</outputDirectory>
   </properties>
 
 </project>
