--- a/vmidentity/rest/vmdir/common/pom.xml
+++ b/vmidentity/rest/vmdir/common/pom.xml
@@ -97,6 +97,6 @@
   </dependencies>
 
   <properties>
-    <outputDirectory>${basedir}/../../../build/vmware-sts/packages</outputDirectory>
+    <outputDirectory>${basedir}/../../../${packageDir}</outputDirectory>
   </properties>
 </project>
