--- a/vmidentity/sso-config/pom.xml
+++ b/vmidentity/sso-config/pom.xml
@@ -127,9 +127,8 @@
  </dependencies>
 
  <properties>
-    <outputDirectory>${basedir}/../build/${PRODUCT_NAME}/packages</outputDirectory>
+    <outputDirectory>${basedir}/../${packageDir}</outputDirectory>
     <skip.unit.tests>false</skip.unit.tests>
-    <PRODUCT_NAME>vmware-sts</PRODUCT_NAME>
     <classesOutputDirectory>${basedir}/../build/${PRODUCT_NAME}/vmware-identity-sso-config/classes</classesOutputDirectory>
  </properties>
 
