remove ROOT project, not required as one war project is already merged
Change-Id: I6cae52c379b828a2ea614098789e593fe2812060

--- a/vmidentity/service/src/main/webapp/WEB-INF/web.xml
+++ b/vmidentity/service/src/main/webapp/WEB-INF/web.xml
@@ -75,6 +75,10 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
+
     <!-- rest -->
     <listener>
         <listener-class>com.vmware.identity.rest.core.server.util.SLF4JListener</listener-class>
