Remove buggy check for mdb.
Change-Id: Ia29cc6fecc0671910fa79cf776c3a188e102e8c4

--- a/vmdir/server/Makefile.am
+++ b/vmdir/server/Makefile.am
@@ -7,11 +7,7 @@
 #         Sriram Nambakam (snambakam@vmware.com)
 #
 
-STOREDIRS =
-
-if HAVE_MDB_STORE
-    STOREDIRS += mdb-store
-endif
+STOREDIRS = mdb-store
 
 SUBDIRS = \
     kdcsrvcommon \
