--- a/vmdir/server/kdckrb5/Makefile.am
+++ b/vmdir/server/kdckrb5/Makefile.am
@@ -1,8 +1,13 @@
 noinst_LTLIBRARIES = libvmkrb5.la
 
+PACSOURCES =
+if VMDIR_ENABLE_PAC
+PACSOURCES += authzdata.c
+endif
+
 libvmkrb5_la_SOURCES = \
     authenticator.c    \
-    authzdata.c        \
+    $(PACSOURCES)      \
     asreq.c            \
     apreq.c            \
     checksum.c         \
