sync lotus-stable/vmdir/... CLN 4798989
Change-Id: Iac0ed4a2ad21fea96d30998ebf515c6a4880c1b1

--- a/vmdir/server/middle-layer/Makefile.am
+++ b/vmdir/server/middle-layer/Makefile.am
@@ -29,6 +29,7 @@ libmiddle_layer_la_SOURCES = \
     search.c \
     specialsearch.c \
     srputil.c \
+    util.c \
     libmain.c
 
 libmiddle_layer_la_CPPFLAGS = \
