Add file to windows project
Change-Id: Iccd5a47664a68c25e2629c2627c5890aa79c02af

--- a/vmdir/server/middle-layer/win/libmiddle-layer.vcproj
+++ b/vmdir/server/middle-layer/win/libmiddle-layer.vcproj
@@ -240,6 +240,10 @@
 				RelativePath="..\srputil.c"
 				>
 			</File>
+			<File
+				RelativePath="..\util.c"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
