Turn up AFD logging.
Change-Id: Id380d8e9d420db411ebc7e13392feba83608ef15

--- a/vmafd/config/vmafd.reg.in
+++ b/vmafd/config/vmafd.reg.in
@@ -10,7 +10,7 @@
     doc = ""
 }
 "Arguments" = {
-    default = "@VMAFD_SBIN_DIR@/vmafdd -s"
+    default = "@VMAFD_SBIN_DIR@/vmafdd -s -l -4"
     doc = ""
 }
 "Environment" = {
